fixtures/parser/invalid/07-dot-reference.fl
component DotReference {
  surface {
    text {
      content: @product.title
    }
  }
}
